Created and implemented DictionaryTester::testAddAndGrow(). Moved all of the code with template stuff to the .h files instead of the .cpp and it all works fine now. Took the .cpp files out of the CMakeLists.txt

--- a/HW6/CMakeLists.txt
+++ b/HW6/CMakeLists.txt
@@ -3,8 +3,8 @@ project(HW6)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES Dictionary.cpp Dictionary.h KeyValue.cpp KeyValue.h)
+set(SOURCE_FILES Dictionary.h KeyValue.h)
 add_executable(HW6 main.cpp ${SOURCE_FILES})
 
 set(TEST_FILES Testing/KeyValueTester.cpp Testing/KeyValueTester.h Testing/DictionaryTester.cpp Testing/DictionaryTester.h)
-add_executable(Testing Testing/testMain.cpp ${SOURCE_FILES} ${TEST_FILES})
+add_executable(Test Testing/testMain.cpp ${SOURCE_FILES} ${TEST_FILES})
