--- a/HW7/CMakeLists.txt
+++ b/HW7/CMakeLists.txt
@@ -3,5 +3,8 @@ project(HW7)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp)
-add_executable(HW7 ${SOURCE_FILES})
+set(SOURCE_FILES Dictionary.h KeyValue.h)
+add_executable(HW7 main.cpp ${SOURCE_FILES})
+
+set(TEST_FILES Testing/KeyValueTester.cpp Testing/KeyValueTester.h Testing/DictionaryTester.cpp Testing/DictionaryTester.h)
+add_executable(Test Testing/testMain.cpp ${SOURCE_FILES} ${TEST_FILES})
