Added the Configuration class with a complete testing suite independent of future components.

--- a/HW7/CMakeLists.txt
+++ b/HW7/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 11)
 set(SOURCE_FILES Dictionary.h KeyValue.h Configuration.h)
 add_executable(HW7 main.cpp ${SOURCE_FILES})
 
-set(TEST_FILES Testing/KeyValueTester.cpp Testing/KeyValueTester.h Testing/DictionaryTester.cpp Testing/DictionaryTester.h Testing/Configuration.cpp Testing/Configuration.h)
+set(TEST_FILES Testing/KeyValueTester.cpp Testing/KeyValueTester.h Testing/DictionaryTester.cpp Testing/DictionaryTester.h Testing/ConfigurationTester.cpp Testing/ConfigurationTester.h)
 add_executable(Test Testing/testMain.cpp ${SOURCE_FILES} ${TEST_FILES})
