Added the ResultSet class and implemented its print function. No testing cases are implemented because it is entirely an output-based class.

--- a/HW7/CMakeLists.txt
+++ b/HW7/CMakeLists.txt
@@ -3,7 +3,7 @@ project(HW7)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES Dictionary.h KeyValue.h Configuration.h)
+set(SOURCE_FILES Dictionary.h KeyValue.h Configuration.h Analyzer.cpp Analyzer.h ResultSet.cpp ResultSet.h)
 add_executable(HW7 main.cpp ${SOURCE_FILES})
 
 set(TEST_FILES Testing/KeyValueTester.cpp Testing/KeyValueTester.h Testing/DictionaryTester.cpp Testing/DictionaryTester.h Testing/ConfigurationTester.cpp Testing/ConfigurationTester.h)
