This is all I could finish, it all compiles.

--- a/HW7/CMakeLists.txt
+++ b/HW7/CMakeLists.txt
@@ -3,8 +3,8 @@ project(HW7)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES Dictionary.h KeyValue.h Configuration.h Analyzer.cpp Analyzer.h ResultSet.cpp ResultSet.h)
+set(SOURCE_FILES Dictionary.h KeyValue.h Configuration.h Analyzer.h ResultSet.cpp ResultSet.h Configuration.cpp ITAK.cpp ITAK.h DenialOfServiceAnalyzer.cpp DenialOfServiceAnalyzer.h PortScanAnalyzer.cpp PortScanAnalyzer.h Utils.cpp Utils.h)
 add_executable(HW7 main.cpp ${SOURCE_FILES})
 
-set(TEST_FILES Testing/KeyValueTester.cpp Testing/KeyValueTester.h Testing/DictionaryTester.cpp Testing/DictionaryTester.h Testing/ConfigurationTester.cpp Testing/ConfigurationTester.h)
+set(TEST_FILES Testing/KeyValueTester.cpp Testing/KeyValueTester.h Testing/DictionaryTester.cpp Testing/DictionaryTester.h Testing/ConfigurationTester.cpp Testing/ConfigurationTester.h Testing/DenialOfServiceAnalyzerTester.cpp Testing/DenialOfServiceAnalyzerTester.h)
 add_executable(Test Testing/testMain.cpp ${SOURCE_FILES} ${TEST_FILES})
